--- a/index.html
+++ b/index.html
@@ -649,6 +649,14 @@
     line-height: 1.5;
   }
 
+  /* ---- AUTOFILL HIGHLIGHT ---- */
+  .customer-select-wrap select {
+    background: var(--blue-pale);
+    border-color: var(--blue-light);
+    font-weight: 600;
+    color: var(--blue-deep);
+  }
+
   /* ---- INLINE DETAILS FIELD ---- */
   .inline-details-field {
     display: flex;
@@ -845,7 +853,27 @@
       <div class="field-row">
         <div class="field-group">
           <label class="field-label required">Customer / Business Name</label>
-          <input type="text" id="customerName" placeholder="e.g. Solo Energy" oninput="updateProgress()">
+          <div class="customer-select-wrap">
+            <select id="customerSelect" onchange="autoFillCustomer(this.value)" style="width:100%">
+              <option value="">— Select existing customer —</option>
+              <optgroup label="── Express Network ──">
+                <option value="2722">BAYSWATER (WA) — 2722</option>
+                <option value="2723">BIBRA LAKE — 2723</option>
+                <option value="6936">CANNING VALE — 6936</option>
+                <option value="2140">KARRATHA TRAVEL &amp; TRUCK (NEW) — 2140</option>
+                <option value="6932">KEWDALE — 6932</option>
+                <option value="2120">KWINANA BEACH — 2120</option>
+                <option value="6942">TOM PRICE — 6942</option>
+                <option value="6933">UPPER SWAN ROADHOUSE — 6933</option>
+                <option value="2123">WANGARA — 2123</option>
+              </optgroup>
+              <option value="new">✏️ New / Unlisted Customer...</option>
+            </select>
+            <div id="newCustomerField" style="display:none; margin-top:8px;">
+              <input type="text" id="customerName" placeholder="Enter customer / business name" oninput="updateProgress()">
+            </div>
+            <input type="hidden" id="customerNameHidden">
+          </div>
         </div>
         <div class="field-group">
           <label class="field-label">Date of Audit</label>
@@ -1660,7 +1688,7 @@ function collectFormData() {
   const get = id => document.getElementById(id)?.value || '';
   return {
     // A
-    customerName: get('customerName'),
+    customerName: getCustomerName(),
     auditDate: get('auditDate'),
     siteAddress: get('siteAddress'),
     suburb: get('suburb'),
@@ -1791,7 +1819,120 @@ function exportExcel(silent=false) {
 }
 
 // =====================================================================
-// ACCESS HOURS TIME PICKER
+// CUSTOMER DATABASE & AUTOFILL
+// =====================================================================
+const CUSTOMERS = {
+  '2722': { name:'BAYSWATER (WA)', siteNum:'2722', network:'Express', address:'CNR JACKSON ST AND COLLIER RD', suburb:'BAYSWATER', state:'WA', postcode:'6053', tankVolume:'22800', safeFill:'18800', fillConnType:'', fillConnSize:'', contactName:'', contactTitle:'', contactMobile:'', contactEmail:'', tankSerial:'', tankOwner:'Client', tankType:'', dipSystem:'N/A' },
+  '2723': { name:'BIBRA LAKE', siteNum:'2723', network:'Express', address:'1 TIMBERYARD WAY', suburb:'BIBRA LAKE', state:'WA', postcode:'6163', tankVolume:'22800', safeFill:'18906', fillConnType:'', fillConnSize:'', contactName:'', contactTitle:'', contactMobile:'', contactEmail:'', tankSerial:'', tankOwner:'Client', tankType:'', dipSystem:'N/A' },
+  '6936': { name:'CANNING VALE', siteNum:'6936', network:'Express', address:'280 BANNISTER RD', suburb:'CANNING VALE', state:'WA', postcode:'6155', tankVolume:'20000', safeFill:'17000', fillConnType:'', fillConnSize:'', contactName:'', contactTitle:'', contactMobile:'', contactEmail:'', tankSerial:'', tankOwner:'Client', tankType:'', dipSystem:'N/A' },
+  '2140': { name:'KARRATHA TRAVEL & TRUCK (NEW)', siteNum:'2140', network:'Express', address:'NORTH WEST COASTAL HIGHWAY', suburb:'KARRATHA', state:'WA', postcode:'6714', tankVolume:'20000', safeFill:'21264', fillConnType:'', fillConnSize:'', contactName:'', contactTitle:'', contactMobile:'', contactEmail:'', tankSerial:'', tankOwner:'Client', tankType:'', dipSystem:'N/A' },
+  '6932': { name:'KEWDALE', siteNum:'6932', network:'Express', address:'KEWDALE RD & ABERNETHY RD', suburb:'KEWDALE', state:'WA', postcode:'6105', tankVolume:'20600', safeFill:'20000', fillConnType:'', fillConnSize:'', contactName:'', contactTitle:'', contactMobile:'', contactEmail:'', tankSerial:'', tankOwner:'Client', tankType:'', dipSystem:'N/A' },
+  '2120': { name:'KWINANA BEACH', siteNum:'2120', network:'Express', address:'4 BEACH STREET', suburb:'KWINANA BEACH', state:'WA', postcode:'6167', tankVolume:'22800', safeFill:'18800', fillConnType:'', fillConnSize:'', contactName:'', contactTitle:'', contactMobile:'', contactEmail:'', tankSerial:'', tankOwner:'Client', tankType:'', dipSystem:'N/A' },
+  '6942': { name:'TOM PRICE', siteNum:'6942', network:'Express', address:'1 MINE RD (CNR PARABURDOO-TOM PRICE RD)', suburb:'TOM PRICE', state:'WA', postcode:'6751', tankVolume:'20000', safeFill:'19500', fillConnType:'', fillConnSize:'', contactName:'', contactTitle:'', contactMobile:'', contactEmail:'', tankSerial:'', tankOwner:'Client', tankType:'', dipSystem:'N/A' },
+  '6933': { name:'UPPER SWAN ROADHOUSE', siteNum:'6933', network:'Express', address:'1333 GREAT NORTHERN HWY', suburb:'UPPER SWAN', state:'WA', postcode:'6069', tankVolume:'20000', safeFill:'19400', fillConnType:'', fillConnSize:'', contactName:'', contactTitle:'', contactMobile:'', contactEmail:'', tankSerial:'', tankOwner:'Client', tankType:'', dipSystem:'N/A' },
+  '2123': { name:'WANGARA', siteNum:'2123', network:'Express', address:'LOT 311 1 NICHE PARADE', suburb:'WANGARA', state:'WA', postcode:'6065', tankVolume:'20000', safeFill:'19886', fillConnType:'', fillConnSize:'', contactName:'', contactTitle:'', contactMobile:'', contactEmail:'', tankSerial:'', tankOwner:'Client', tankType:'', dipSystem:'N/A' },
+};
+
+function autoFillCustomer(siteNum) {
+  const newField = document.getElementById('newCustomerField');
+
+  if (siteNum === 'new') {
+    // Show manual entry field
+    newField.style.display = 'block';
+    document.getElementById('customerName').value = '';
+    document.getElementById('customerNameHidden').value = '';
+    clearCustomerFields();
+    updateProgress();
+    return;
+  }
+
+  newField.style.display = 'none';
+
+  if (!siteNum) {
+    document.getElementById('customerNameHidden').value = '';
+    clearCustomerFields();
+    updateProgress();
+    return;
+  }
+
+  const c = CUSTOMERS[siteNum];
+  if (!c) return;
+
+  // Store name for use in PDF/Excel
+  document.getElementById('customerNameHidden').value = c.name;
+
+  // Section A — site details
+  setField('siteAddress', c.address);
+  setField('suburb', c.suburb);
+  setField('postcode', c.postcode);
+  setField('siteContact', c.contactName);
+  setField('siteContactTitle', c.contactTitle);
+  setField('siteEmail', c.contactEmail);
+  setField('siteMobile', c.contactMobile);
+
+  // State dropdown
+  const stateEl = document.getElementById('state');
+  for (let i = 0; i < stateEl.options.length; i++) {
+    if (stateEl.options[i].value === c.state) { stateEl.selectedIndex = i; break; }
+  }
+
+  // Section C — tank details
+  setField('tankVolume', c.tankVolume);
+  setField('safeFill', c.safeFill);
+  setField('tankSerial', c.tankSerial);
+  setField('tankType', c.tankType);
+  setField('dipSystem', c.dipSystem);
+
+  // Tank owner dropdown
+  const ownerEl = document.getElementById('tankOwner');
+  for (let i = 0; i < ownerEl.options.length; i++) {
+    if (ownerEl.options[i].value === c.tankOwner) { ownerEl.selectedIndex = i; break; }
+  }
+
+  // Fill connection dropdowns
+  const connTypeEl = document.getElementById('fillConnType');
+  for (let i = 0; i < connTypeEl.options.length; i++) {
+    if (connTypeEl.options[i].value === c.fillConnType) { connTypeEl.selectedIndex = i; break; }
+  }
+  const connSizeEl = document.getElementById('fillConnSize');
+  for (let i = 0; i < connSizeEl.options.length; i++) {
+    if (connSizeEl.options[i].value === c.fillConnSize) { connSizeEl.selectedIndex = i; break; }
+  }
+
+  showToast(`✅ ${c.name} details loaded`);
+  updateProgress();
+
+  // Scroll to show what was filled
+  document.getElementById('siteAddress').scrollIntoView({ behavior: 'smooth', block: 'center' });
+}
+
+function clearCustomerFields() {
+  ['siteAddress','suburb','postcode','siteContact','siteContactTitle','siteEmail',
+   'siteMobile','tankVolume','safeFill','tankSerial','tankType','dipSystem'].forEach(id => setField(id, ''));
+  document.getElementById('state').selectedIndex = 0;
+  document.getElementById('tankOwner').selectedIndex = 0;
+  document.getElementById('fillConnType').selectedIndex = 0;
+  document.getElementById('fillConnSize').selectedIndex = 0;
+}
+
+function setField(id, value) {
+  const el = document.getElementById(id);
+  if (el) el.value = value || '';
+}
+
+// Helper to get customer name for PDF/Excel (works for both dropdown and new entry)
+function getCustomerName() {
+  const select = document.getElementById('customerSelect');
+  if (select.value === 'new') {
+    return document.getElementById('customerName')?.value || '';
+  }
+  if (select.value) {
+    return document.getElementById('customerNameHidden').value || '';
+  }
+  return '';
+}
+
+// =====================================================================
 // =====================================================================
 function toggle24hrs(checkbox) {
   const timeFields = document.getElementById('timeFields');
