--- a/index.html
+++ b/index.html
@@ -656,6 +656,55 @@
     line-height: 1.5;
   }
 
+  /* ---- TEST BANNER ---- */
+  .test-banner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #fffbeb;
+    border: 2px dashed #f59e0b;
+    border-radius: var(--radius);
+    padding: 12px 16px;
+    margin-bottom: 12px;
+    gap: 12px;
+  }
+  .test-banner-left {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    flex-wrap: wrap;
+  }
+  .test-badge {
+    background: #f59e0b;
+    color: white;
+    font-size: 11px;
+    font-weight: 800;
+    padding: 3px 10px;
+    border-radius: 20px;
+    letter-spacing: 0.5px;
+    white-space: nowrap;
+  }
+  .test-desc {
+    font-size: 12px;
+    color: #92400e;
+    font-weight: 500;
+  }
+  .test-btn {
+    background: #f59e0b;
+    color: white;
+    border: none;
+    border-radius: var(--radius-sm);
+    padding: 10px 18px;
+    font-size: 13px;
+    font-weight: 700;
+    cursor: pointer;
+    white-space: nowrap;
+    font-family: 'DM Sans', sans-serif;
+    transition: background 0.15s;
+    flex-shrink: 0;
+  }
+  .test-btn:hover { background: #d97706; }
+
   /* ---- AUDIT RESULTS PANEL ---- */
   .audit-score-wrap {
     display: flex;
@@ -1014,7 +1063,16 @@
         <input type="email" id="emailCc" placeholder="cc@example.com">
       </div>
     </div>
-    <p style="font-size:11.5px;color:var(--gray-mid);margin-top:6px;">ℹ️ The "Submit &amp; Email PDF" button will generate the PDF and open your mail client with it attached. Your email app handles sending.</p>
+    <p style="font-size:11.5px;color:var(--gray-mid);margin-top:6px;">ℹ️ The "Complete &amp; Send Audit" button will generate and email the PDF automatically.</p>
+  </div>
+
+  <!-- TEST DATA BANNER -->
+  <div class="test-banner">
+    <div class="test-banner-left">
+      <span class="test-badge">🧪 TEST MODE</span>
+      <span class="test-desc">Fills all fields with sample data for testing</span>
+    </div>
+    <button class="test-btn" onclick="fillTestData()">⚡ Fill Test Data</button>
   </div>
 
   <!-- SECTION A: SITE DETAILS -->
@@ -2834,6 +2892,118 @@ async function generatePDF(returnDoc=false) {
   const fname = `BioBlue_Site_Audit_${d.customerName.replace(/\s+/g,'_') || 'Draft'}_${d.auditDate || 'undated'}.pdf`;
   doc.save(fname);
   showToast('📄 PDF downloaded!');
+}
+
+// =====================================================================
+// TEST DATA FILL
+// =====================================================================
+async function fillTestData() {
+  // Clear first
+  clearForm();
+  await new Promise(r => setTimeout(r, 100));
+
+  // Section A — select manual new customer as test
+  const sel = document.getElementById('customerSelect');
+  sel.value = 'new';
+  document.getElementById('newCustomerField').style.display = 'block';
+  document.getElementById('customerName').value = 'VIVA TEST SITE';
+  document.getElementById('customerNameHidden').value = 'VIVA TEST SITE';
+
+  // Manually fill address details
+  document.getElementById('siteAddress').value = '123 Test Street';
+  document.getElementById('suburb').value = 'TESTVILLE';
+  const stateEl = document.getElementById('state');
+  for (let i = 0; i < stateEl.options.length; i++) {
+    if (stateEl.options[i].value === 'WA') { stateEl.selectedIndex = i; break; }
+  }
+  document.getElementById('postcode').value = '6000';
+  document.getElementById('siteContact').value = 'Test Contact';
+  document.getElementById('siteContactTitle').value = 'Site Manager';
+  document.getElementById('siteEmail').value = 'test@vivaenergy.com.au';
+  document.getElementById('siteMobile').value = '0400 000 000';
+  document.getElementById('siteNumber').value = 'TEST-001';
+  document.getElementById('siteNetwork').value = 'Express';
+
+  // Date
+  document.getElementById('auditDate').value = new Date().toISOString().split('T')[0];
+
+  // Access hours
+  document.getElementById('accessOpen').value = '06:00';
+  document.getElementById('accessClose').value = '22:00';
+  updateAccessHours();
+
+  // Max vehicle
+  document.getElementById('maxVehicle').value = 'B-Double Trailer';
+
+  // Section B — answer all Y/N
+  const testAnswers = {
+    // B1
+    truckAccess: 'Y', overheadWires: 'N', manoeuvre: 'Y',
+    noReversing: 'Y', parkingMarked: 'Y', gateAccess: 'Y',
+    // B2
+    induction: 'N', pedestrianAccess: 'Y', hazardFree: 'Y',
+    lighting: 'Y', cones: 'Y', tankVents: 'Y', ppeRequired: 'Y',
+    // B3
+    spillContain: 'Y', awayFromDrains: 'Y', drainsMarked: 'Y', spillKit: 'Y',
+    // C1
+    fillCondition: 'Y', driverAccess: 'Y', raisedPlatform: 'NA',
+    fillLabelled: 'Y', safeFillMarked: 'Y', dipLabelled: 'Y', levelAccurate: 'Y',
+    // C2
+    dedicated: 'Y', labelledOnly: 'Y', compatMaterials: 'Y',
+    noIncompat: 'Y', noLeak: 'Y', sunProtect: 'Y', cleaned: 'NA',
+    sealedEquip: 'Y', nozzleClean: 'Y', lidSealed: 'Y',
+    ventSystem: 'Y', ventSealed: 'Y', fillClean: 'Y', dustCap: 'Y',
+    // E1
+    photoGate: 'Y', photoTank: 'Y', communicated: 'Y',
+  };
+
+  Object.entries(testAnswers).forEach(([id, val]) => {
+    if (ynValues[id] !== undefined || document.getElementById('ynitem-' + id)) {
+      setYN(id, val);
+    }
+  });
+
+  // PPE checkboxes
+  document.querySelectorAll('input[name="ppe"]').forEach(cb => {
+    if (['Hi-Vis Vest','Steel Cap Boots','Safety Glasses'].includes(cb.value)) {
+      cb.checked = true;
+    }
+  });
+  updatePPE();
+  document.getElementById('ppeField').style.display = 'block';
+
+  // Gate access details
+  document.getElementById('keyCode').value = 'Gate code: 1234 — collect key from reception';
+  document.getElementById('keyCodeField').style.display = 'block';
+
+  // Tank details
+  document.getElementById('tankVolumeSelect').value = '5000';
+  toggleTankVolumeOther('5000');
+  document.getElementById('safeFill').value = '4500';
+  document.getElementById('currentLevel').value = '2000';
+  document.getElementById('tankSerial').value = 'ADBT-TEST-001';
+  document.getElementById('tankType').value = 'Poly Slim';
+  document.getElementById('dipSystem').value = 'Manual Dip';
+
+  // Section D
+  document.getElementById('correctiveActions').value = 'Test audit — no corrective actions required. All systems operating within normal parameters.';
+
+  // Photo checkboxes
+  document.getElementById('photoGateDone').checked = true;
+  document.getElementById('photoTankDone').checked = true;
+
+  // Auditor (already pre-filled but set again to be sure)
+  document.getElementById('auditorName').value = 'Michael Hodnett';
+  document.getElementById('auditorTitle').value = 'BDM';
+  document.getElementById('auditorEmail').value = 'michael.hodnett@bioblue.com.au';
+  document.getElementById('auditorMobile').value = '0427 670 726';
+
+  updateProgress();
+  updateComplianceBanner();
+  updateAuditResults();
+
+  showToast('⚡ Test data loaded — ready to test!');
+  window.scrollTo({ top: 0, behavior: 'smooth' });
 }
 
 // =====================================================================
